helidon: native image without parent pom